++ Rotas delete reminder e gift
